manual_test_error.txt
docker-compose : time
="2025-12-06T22:11:32
-03:00" 
level=warning msg="C:
\\Users\\PC-MATHIAS\\
Desktop\\Sistema 
Encuestas Sapientia\\
sistema-encuestas-sap
ientia\\docker-compos
e.yml: the attribute 
`version` is 
obsolete, it will be 
ignored, please 
remove it to avoid 
potential confusion"
En línea: 1 
Carácter: 1
+ docker-compose 
exec backend python 
-c "import os; from 
sqlalchemy imp ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (time="2   
 025-12-0...tial     
confusion":Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
  File "<string>", 
line 1
    import os; from 
sqlalchemy import 
create_engine, text; 
url = os.getenv('DATA
BASE_URL'); engine = 
create_engine(url); 
c = 
engine.connect(); 
c.execute(text(" 
CREATE TYPE encuestas
_oltp.roladmin AS 
ENUM ADMINISTRADOR 
DIRECTIVO \));
                     
                     
                     
                     
                     
                     
                     
           ^
SyntaxError: 
unterminated string 
literal (detected at 
line 1)
